fix span with wrong font family

--- a/src/assets/css/_page__blog-base.scss
+++ b/src/assets/css/_page__blog-base.scss
@@ -100,6 +100,10 @@ a {
             font-family: 'Roboto Mono', monospace;
         }
 
+        span {
+            font-family: inherit;
+        }
+
         .highlight-line:before {
             user-select: none;
             border-right: 1px solid #404040;
